# rio

./: .gitmodules  CMakeLists.txt  RIO.md
include/rio/: async_utils.hpp  event_loop.hpp  selector.hpp  task.hpp
include/rio/common/: bad_file_descriptor.hpp  broken_promise.hpp  coro_traits.hpp  event_loop_exceptions.hpp  file_ops.hpp  time_type.hpp
include/rio/internal/: bitwise_base.hpp
src/rio/: event_loop.cpp  selector.cpp  time_type.cpp
tests/: CMakeLists.txt  main.cpp
